Added: JWT 로그인 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
     h2:
         console:
             enabled: true
+
+jwt:
+    issuer: tintachina84@gmail.com
+    secret_key: blog-example
