Added: Google OAuth2 (not working)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,27 @@
 spring:
-    jpa:
-        show-sql: true
-        properties:
-            hibernate:
-                format_sql: true
-        defer-datasource-initialization: true
-    datasource:
-        url: jdbc:h2:mem:testdb
-        username: sa
-    h2:
-        console:
-            enabled: true
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+  h2:
+    console:
+      enabled: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 1018422997696-c9e8jjujqpdrvfv9ds9a5196tpvlod2q.apps.googleusercontent.com
+            client-secret: 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
+          scope:
+            - email
+            - profile
 
 jwt:
-    issuer: tintachina84@gmail.com
-    secret_key: blog-example
+  issuer: tintachina84@gmail.com
+  secret_key: blog-example
