--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
       client:
         registration:
           google:
-            client-id: 1018422997696-c9e8jjujqpdrvfv9ds9a5196tpvlod2q.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 1018422997696...
+            client-secret: GOCSPX...
             scope:
               - email
               - profile
